<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_medium"
    app:cardBackgroundColor="#FFFFFF"
    card_view:cardElevation="@dimen/margin_small">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="30">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="13.5">

            <ImageView
                android:id="@+id/iv_hero_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/it_logo" />

            <ImageView
                android:id="@+id/iv_full_screen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|bottom"
                android:background="#8a020202"
                android:padding="@dimen/margin_medium"
                android:src="@drawable/full_screen" />

            <FrameLayout
                android:id="@+id/iv_heart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/margin_small"
                android:background="@drawable/heart">

                <TextView
                    android:id="@+id/tv_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_rating"
                    android:textColor="@color/pure_white"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="italic|bold" />
            </FrameLayout>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="16.5"
            android:padding="@dimen/margin_medium">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_movie_title"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular_2x" />

            <TextView
                android:id="@+id/tv_movie_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_title"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/txt_movie_type"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_genre"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/txt_popularity"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular_2x" />

            <LinearLayout
                android:id="@+id/ll_popularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_popularity"
                android:layout_marginTop="@dimen/margin_medium_2_n"
                android:weightSum="7">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="1"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="1"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="1"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="1"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="1"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="1"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="0.4"
                    android:src="@drawable/star" />

            </LinearLayout>

            <TextView
                android:id="@+id/btn_movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rounded_primary_border"
                android:foreground="@drawable/bg_ripple_primary"
                android:paddingBottom="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium_2"
                android:paddingRight="@dimen/margin_medium_2"
                android:paddingTop="@dimen/margin_medium"
                android:text="@string/txt_movie_overview"
                android:textColor="@color/pure_white"
                android:textSize="@dimen/text_regular_2x" />


        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>